[package]
name = "paltaio-smb-fs"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Local-filesystem ShareBackend for paltaio-smb-server, sandboxed via cap-std."

[lib]
name = "smb_fs"

[dependencies]
smb-server.workspace = true

tokio = { workspace = true }
async-trait.workspace = true
bytes.workspace = true
tracing.workspace = true
thiserror.workspace = true
cap-std.workspace = true

[dev-dependencies]
tempfile = "3"
